# lab4

./: .gitignore  CMakeLists.txt  ExpectedTestOutput.txt  FrostfruitCharacterizationTests.cc  README.md  mccabe-report.txt
ext/googletest/: .gitignore
ext/googletest/googlemock/docs/: DevGuide.md  ForDummies.md
ext/googletest/googletest/docs/: AdvancedGuide.md  DevGuide.md
include/: CheeseItem.h  ConcertTicketItem.h  Frostfruit.h  IItem.h  LegolasItem.h
src/: Frostfruit.cc  FrostfruitMain.cc  FrostfruitUnitTests.cc
tests/: FrostfruitCharacterizationTests.cc  FrostfruitUnitTests.cc
